# GfxExp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GfxExp.sln  LICENSE.md  README.md  cuda_util.cpp  cuda_util.h  optix_util.h  optixu_on_cudau.h
cmake/: copy_files.cmake  nvcuda_compile_ptx.cmake
common/: basic_types.h  bvh_builder.cpp  bvh_builder.h  common.cpp  common.h  common_device.cuh  common_host.cpp  common_host.h  common_shader.h  common_shared.h  curve_evaluator.h  dds_loader.cpp  dds_loader.h  obj_loader.cpp  obj_loader.h  stopwatch.h  vdb.cpp  vdb.h  vdb_interface.h
common/gpu_kernels/: compute_light_probs.cu  compute_prob_texture.cu
common/shaders/: drawOptiXResult.frag  drawOptiXResult.vert  full_screen.vert
data/: 50p_gray_32x32.dds  TCom_Ground_PebblesRiver2_2.5x2.5_1K_height.dds  TCom_Pavement_CobblestoneMedieval15_3x3_1K_height.dds  TCom_Rock_Cliff3_2x2_1K_height.dds  TCom_Rock_CliffLayered_1.5x1.5_1K_height.dds  TCom_Wall_Stone4_2x2_1K_height.dds  acknowledgement.md  fabric_instantiated.mtl  gebco_08_rev_elev_4096_4096.dds  stanford_bunny_309_faces.mtl  teapot.mtl
ext/assimp/: assimp-vc142-mt.lib  assimp-vc143-mt.lib
ext/assimp/include/assimp/: config.h
ext/glfw/lib/: glfw3.lib
ext/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
ext/vdb/: LICENSE  mod_to_original_vdb.txt  vdb.h
neural_radiance_caching/: CMakeLists.txt  copy_buffers.cu  kernels.cu  network_interface.cu  network_interface.h  neural_radiance_caching.args.json  neural_radiance_caching.vcxproj  neural_radiance_caching.vcxproj.filters  neural_radiance_caching_main.cpp  neural_radiance_caching_shared.h  optix_gbuffer_kernels.cu  optix_kernels.cu  optix_pathtracing_kernels.cu
neural_radiance_caching/gpu_kernels/: copy_buffers.cu  nrc_setup_kernels.cu  optix_gbuffer_kernels.cu  optix_pathtracing_kernels.cu
nrtdsm/: CMakeLists.txt  nrtdsm.vcxproj  nrtdsm.vcxproj.filters  nrtdsm_main.cpp  nrtdsm_sandbox.cpp  nrtdsm_shared.h
nrtdsm/gpu_kernels/: copy_buffers.cu  nrtdsm_intersection_kernels.h  nrtdsm_preprocess_kernels.cu  optix_gbuffer_kernels.cu  optix_pathtracing_kernels.cu
path_tracing/: CMakeLists.txt  copy_buffers.cu  optix_gbuffer_kernels.cu  optix_kernels.cu  optix_pathtracing_kernels.cu  path_tracing.vcxproj  path_tracing.vcxproj.filters  path_tracing_main.cpp  path_tracing_scene.h  path_tracing_shared.h
path_tracing/gpu_kernels/: copy_buffers.cu  optix_gbuffer_kernels.cu  optix_pathtracing_kernels.cu
path_tracing/shaders/: drawOptiXResult.frag
regir/: CMakeLists.txt  build_cell_reservoirs.cu  copy_buffers.cu  optix_gbuffer_kernels.cu  optix_kernels.cu  optix_pathtracing_kernels.cu  regir.vcxproj  regir.vcxproj.filters  regir_main.cpp  regir_scene.h  regir_shared.h
regir/gpu_kernels/: build_cell_reservoirs.cu  copy_buffers.cu  optix_gbuffer_kernels.cu  optix_pathtracing_kernels.cu
restir/: CMakeLists.txt  copy_buffers.cu  light_pre_sampling.cu  optix_gbuffer_kernels.cu  optix_kernels.cu  optix_restir_kernels.cu  optix_restir_rearch_kernels.cu  per_pixel_ris.cu  restir.args.json  restir.vcxproj  restir.vcxproj.filters  restir_main.cpp  restir_scene.h  restir_shared.h
restir/RIS_Test/: ris_test.ipynb
restir/gpu_kernels/: copy_buffers.cu  optix_gbuffer_kernels.cu  optix_restir_kernels.cu  optix_restir_rearch_kernels.cu  per_pixel_ris.cu
restir_di/: CMakeLists.txt  restir_di.vcxproj  restir_di.vcxproj.filters  restir_di_main.cpp  restir_di_shared.h
restir_di/RIS_Test/: ris_test.ipynb
restir_di/gpu_kernels/: copy_buffers.cu  optix_gbuffer_kernels.cu  optix_restir_di_kernels.cu  optix_restir_di_rearch_kernels.cu  per_pixel_ris.cu
svgf/: CMakeLists.txt  svgf.vcxproj  svgf.vcxproj.filters  svgf_main.cpp  svgf_shared.h
svgf/gpu_kernels/: optix_pathtracing_kernels.cu  optix_picker_kernels.cu  svgf.cu  visualize.cu
svgf/shaders/: depth_copy.frag  draw_g_buffers.frag  draw_g_buffers.vert  draw_g_buffers_shared.h  draw_result.frag
tfdm/: CMakeLists.txt  acknowledgement.md  affine_arithmetic.h  sandbox.cpp  tfdm.cu  tfdm.vcxproj  tfdm.vcxproj.filters  tfdm_main.cpp  tfdm_sandbox.cpp  tfdm_shared.h
tfdm/gpu_kernels/: copy_buffers.cu  optix_gbuffer_kernels.cu  optix_pathtracing_kernels.cu  tfdm.cu  tfdm_intersection_kernels.h  tfdm_preprocess_kernels.cu
utils/: cuda_util.cpp  cuda_util.h  cuda_util.natvis  gl_util.cpp  gl_util.h  optix_util.cpp  optix_util.h  optix_util.natvis  optix_util_private.h  optixu_on_cudau.h
